...
            "state": "translated",
            "value": "已选中"
          }
        }
      }
    },
    "年度心情热力图": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Yearly Mood Heatmap"
...
            "state": "translated",
            "value": "放弃编辑？"
          }
        }
      }
    },
    "新建时刻": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Moment"
...
            "state": "translated",
            "value": "解锁无限日记、无限照片、无限标签，随时随地记录每一个时刻"
          }
        }
      }
    },
    "设置": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
